--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
           </div>
         </div>
         <p class="text-muted mb-0">
-          Currently <strong>v6.2.10</strong>
+          Currently <strong>v6.4.1</strong>
           <span class="px-1">·</span>
           <a href="https://getdatepicker.com/5-4/" class="link-secondary">v5 docs</a>
         </p>
@@ -200,10 +200,10 @@
         <pre><code class="language-html">&lt;!-- Popperjs --&gt;
 &lt;script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha256-BRqBN7dYgABqtY9Hd4ynE+1slnEw+roEPFzQ7TRRfcg=" crossorigin="anonymous"&gt;&lt;/script&gt;
 &lt;!-- Tempus Dominus JavaScript --&gt;
-&lt;script src="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.2.10/dist/js/tempus-dominus.min.js" crossorigin="anonymous"&gt;&lt;/script&gt;
+&lt;script src="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.4.1/dist/js/tempus-dominus.min.js" crossorigin="anonymous"&gt;&lt;/script&gt;
 
 &lt;!-- Tempus Dominus Styles --&gt;
-&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.2.10/dist/css/tempus-dominus.min.css" crossorigin="anonymous"&gt;</code>
+&lt;link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@eonasdan/tempus-dominus@6.4.1/dist/css/tempus-dominus.min.css" crossorigin="anonymous"&gt;</code>
 </pre>
       </div>
     </div>
@@ -215,9 +215,33 @@
           <p>Looking for a template with the datepicker ready to go? Then get check out these templates from our
             partners.</p>
         </div>
-        <div class="row center-block">
+        <div class="row center-block mb-5">
           <div class="col-12">
-            <h4 class="row">Creative Tim</h4>
+            <h4 class="row">Metronic by keenthemes</h4>
+          </div>
+          <div class="col-sm-12 col-md-3">
+            <a href="https://1.envato.market/7mWAG5" target="_blank" class="affiliate-project" rel="noopener">
+              <img src="./6/images/metronic-thumb-1.png" alt="Metronic" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-sm-12 col-md-3">
+            <a href="https://1.envato.market/7mWAG5" target="_blank" class="affiliate-project" rel="noopener">
+              <img src="./6/images/metronic-thumb-2.png" alt="Metronic 2" class="img-fluid">
+            </a>
+          </div>
+          <div class="col-sm-12 col-md-3">
+            <a href="https://1.envato.market/7mWAG5" target="_blank" class="affiliate-project" rel="noopener">
+              <img src="./6/images/metronic-thumb-3.png" alt="Metronic 3" class="img-fluid">
+            </a>
+          </div>
+        </div>
+        <hr>
+        <div class="row center-block mt-5">
+          <h4>Check out this other great themes.</h4>
+        </div>
+        <div class="row center-block mt-3 mb-5">
+          <div class="col-12">
+            <h4 class="row">From Creative Tim</h4>
           </div>
           <div class="col-sm-12 col-md-3">
             <a href="https://www.creative-tim.com/product/material-dashboard-pro?partner=127205" target="_blank" class="affiliate-project" rel="noopener">
@@ -238,9 +262,10 @@
             </a>
           </div>
         </div>
-        <div class="row center-block">
+        <hr>
+        <div class="row center-block mt-5">
           <div class="col-12">
-            <h4 class="row">Flatlogic</h4>
+            <h4 class="row">From Flatlogic</h4>
           </div>
           <div class="col-sm-12 col-md-3">
             <a href="https://flatlogic.com/templates/light-blue-html5?ref=dg1K3bfa8w" target="_blank" class="affiliate-project" rel="noopener">
@@ -281,7 +306,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.2.10</li>
+          <li class="mb-2">Currently v6.4.1</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
