--- a/6/datetime.html
+++ b/6/datetime.html
@@ -263,12 +263,12 @@
   </div>
   <div id="mainContent" class="bd-content ps-lg-4">
   <p>
-    In v6 I dropped moment as a required library since it is no longer recommended. Almost all of the functions in the
-    picker make use of my custom DateTime class which extends the native Date object. You can read more about it on <a href="https://eonasdan.com/posts/date-time-library.html" target="_blank">my blog.</a>
+    In v6 I dropped moment as a required library since it is no longer recommended. Almost all the functions in the
+    picker make use of my custom DateTime class which extends the native Date object.
   </p>
   <p>
-    Because I am simply extending the native date object, any returned values will still behave like a date object. Which
-    means you don't need to adpot using DateTime in your project unless you want to. Once less library to worry about!
+    Because I am simply extending the native date object, any returned values will still behave like a date object.
+    Which means you don't need to adopt using DateTime in your project unless you want to. Once less library to worry about!
   </p>
 </div>
 </main>
@@ -288,7 +288,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.2.10</li>
+          <li class="mb-2">Currently v6.4.1</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
