--- a/6/functions.html
+++ b/6/functions.html
@@ -263,11 +263,11 @@
   </div>
   <div id="mainContent" class="bd-content ps-lg-4">
     <meta http-equiv="refresh" content="0; URL=https://getdatepicker.com/6/functions">
-    <link rel="canonical" href="https://getdatepicker.com/6/functions">
+    <link rel="canonical" href="https://getdatepicker.com/6/functions/">
 
     The functions have been split up and moved to a different page.
 
-    Redirecting to <a href="https://getdatepicker.com/6/functions">https://getdatepicker.com/6/functions</a>
+    Redirecting to <a href="https://getdatepicker.com/6/functions/">https://getdatepicker.com/6/functions</a>
 </div>
 </main>
 </div>
@@ -286,7 +286,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.2.10</li>
+          <li class="mb-2">Currently v6.4.1</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
