deploy: 55326d79dddf1a78648e99bbabce9cb2173b8a4f

--- a/6/change-log-archive.html
+++ b/6/change-log-archive.html
@@ -225,17 +225,18 @@
         <ul class="list-unstyled fw-normal pb-1 small">
           <li><a href="/6/plugins/" class="d-inline-flex align-items-center rounded">Overview</a>
           </li>
+          <li><a href="/6/plugins/bi1.html" class="d-inline-flex align-items-center rounded">Bootstrap Icons v1</a></li>
           <li><a href="/6/plugins/customDateFormat.html" class="d-inline-flex align-items-center rounded">Custom Date
             Formats</a>
           </li>
-          <li><a href="/6/plugins/fa5.html" class="d-inline-flex align-items-center rounded">Font Awesome
-            5</a></li>
-          <li><a href="/6/plugins/paint.html" class="d-inline-flex align-items-center rounded">Paint (Custom
-            classes)</a></li>
-          <li><a href="/6/plugins/moment.html" class="d-inline-flex align-items-center rounded">Momentjs</a>
-          </li>
           <li><a href="/6/plugins/floating-ui.html" class="d-inline-flex align-items-center rounded">Floating UI</a>
           </li>
+          <li><a href="/6/plugins/fa5.html" class="d-inline-flex align-items-center rounded">Font Awesome
+            5</a></li>
+          <li><a href="/6/plugins/moment.html" class="d-inline-flex align-items-center rounded">Momentjs</a>
+          </li>
+          <li><a href="/6/plugins/paint.html" class="d-inline-flex align-items-center rounded">Paint (Custom
+            classes)</a></li>
         </ul>
       </li>
     </ul>
@@ -655,7 +656,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.4.1</li>
+          <li class="mb-2">Currently v6.4.3</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
