deploy: fbb65fa2baac50f8b340f617e6467326c21e4859

--- a/6/change-log.html
+++ b/6/change-log.html
@@ -267,6 +267,16 @@
     <h1>Version 6</h1>
 
     <div class="row">
+      <h2>6.4.4</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed an issue with the date formatting</li>
+        <li>Fixed format escape brackets</li>
+        <li>Fixes setting a date to null #2774</li>
+      </ul>
+    </div>
+
+    <div class="row">
       <h2>6.4.1</h2>
       <h3>New</h3>
       <ul>
@@ -421,7 +431,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.4.3</li>
+          <li class="mb-2">Currently v6.4.4</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
