--- a/6/plugins/fa5.html
+++ b/6/plugins/fa5.html
@@ -126,7 +126,7 @@
         <span class="d-none d-lg-inline">Tempus Dominus</span> v6.0
       </button>
       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-versions">
-        <li><a class="dropdown-item current" aria-current="true" href="/6/">Latest (6.7.7)</a></li>
+        <li><a class="dropdown-item current" aria-current="true" href="/6/">Latest (6.7.10)</a></li>
         <li>
           <hr class="dropdown-divider">
         </li>
@@ -295,13 +295,13 @@ const datetimepicker1 = new tempusDominus.TempusDominus(document.getElementById(
 //to set globally
 tempusDominus.extend(window.tempusDominus.plugins.fa_five.load);
 //or
-import {load, faFiveIcons} from 'tempusDominus/plugins/fa-five'
-tempusDominus.extend(load);
+import {load, faFiveIcons} from '@eonasdan/tempus-dominus/dist/plugins/fa-five'
+extend(load);
 
 // otherwise to set icons to an individual picker
-datetimepicker1.updateOptions({ display: icons: window.tempusDominus.plugins.fa_five.faFiveIcons});
+datetimepicker1.updateOptions({ display: { icons: window.tempusDominus.plugins.fa_five.faFiveIcons }});
 //or
-datetimepicker1.updateOptions({ display: icons: faFiveIcons});</code>
+datetimepicker1.updateOptions({ display: { icons: faFiveIcons }});</code>
     </pre>
   </div>
 
@@ -387,7 +387,7 @@ datetimepicker1.updateOptions({ display: icons: faFiveIcons});</code>
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.7.7</li>
+          <li class="mb-2">Currently v6.7.10</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
