--- a/6/change-log.html
+++ b/6/change-log.html
@@ -126,7 +126,7 @@
         <span class="d-none d-lg-inline">Tempus Dominus</span> v6.0
       </button>
       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-versions">
-        <li><a class="dropdown-item current" aria-current="true" href="/6/">Latest (6.7.10)</a></li>
+        <li><a class="dropdown-item current" aria-current="true" href="/6/">Latest (6.7.11)</a></li>
         <li>
           <hr class="dropdown-divider">
         </li>
@@ -262,6 +262,15 @@
   <div id="mainContent" class="bd-content ps-lg-4">
   <div id="change-log">
     <h1>Version 6</h1>
+
+
+    <div class="row">
+      <h2>6.7.11</h2>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Hotfix for #2837</li>
+      </ul>
+    </div>
 
     <div class="row">
       <h2>6.7.10</h2>
@@ -460,7 +469,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.7.10</li>
+          <li class="mb-2">Currently v6.7.11</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
