deploy: 41ee0a4fcd5ea26759258375cad6d9ccf83db451

--- a/6/change-log.html
+++ b/6/change-log.html
@@ -126,7 +126,7 @@
         <span class="d-none d-lg-inline">Tempus Dominus</span> v6.0
       </button>
       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-versions">
-        <li><a class="dropdown-item current" aria-current="true" href="/6/">Latest (6.7.16)</a></li>
+        <li><a class="dropdown-item current" aria-current="true" href="/6/">Latest (6.7.19)</a></li>
         <li>
           <hr class="dropdown-divider">
         </li>
@@ -262,6 +262,20 @@
   <div id="mainContent" class="bd-content ps-lg-4">
   <div id="change-log">
     <h1>Version 6</h1>
+
+    <div class="row">
+      <h2>6.7.19</h2>
+      <h3>New</h3>
+      <ul>
+        <li>Added <code>maxWeekdayLength</code>. This option will truncate the day of the week header.</li>
+      </ul>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed #2871</li>
+        <li>Fixed #2860</li>
+        <li>Fixed #2817</li>
+      </ul>
+    </div>
 
     <div class="row">
       <h2>6.7.16</h2>
@@ -487,7 +501,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.7.16</li>
+          <li class="mb-2">Currently v6.7.19</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
