deploy: 5f79399779918fd588ae1f4d598b3de30998ca00

--- a/6/change-log.html
+++ b/6/change-log.html
@@ -126,7 +126,7 @@
         <span class="d-none d-lg-inline">Tempus Dominus</span> v6.0
       </button>
       <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="bd-versions">
-        <li><a class="dropdown-item current" aria-current="true" href="/6/">Latest (6.7.19)</a></li>
+        <li><a class="dropdown-item current" aria-current="true" href="/6/">Latest (6.9.4)</a></li>
         <li>
           <hr class="dropdown-divider">
         </li>
@@ -262,6 +262,23 @@
   <div id="mainContent" class="bd-content ps-lg-4">
   <div id="change-log">
     <h1>Version 6</h1>
+
+    <div class="row">
+      <h2>6.9.4</h2>
+      <h3>New</h3>
+      <ul>
+        <li>SCSS now provides <code>root</code> css variables #2857</li>
+        <li>Custom date format parsing errors are now caught and provided through the event system. #2793</li>
+      </ul>
+      <h3>Bug fixes</h3>
+      <ul>
+        <li>Fixed #2886</li>
+        <li>Fixed #2884</li>
+        <li>Fixed #2881</li>
+        <li>Fixed #2879</li>
+        <li>Fixed #2877 </li>
+      </ul>
+    </div>
 
     <div class="row">
       <h2>6.7.19</h2>
@@ -501,7 +518,7 @@
           </li>
           <li class="mb-2">Code licensed <a href="https://github.com/Eonasdan/tempus-dominus/blob/master/LICENSE" target="_blank" rel="license noopener">MIT</a>, docs <a href="https://creativecommons.org/licenses/by/3.0/" target="_blank" rel="license noopener">CC BY 3.0</a>.
           </li>
-          <li class="mb-2">Currently v6.7.19</li>
+          <li class="mb-2">Currently v6.9.4</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
