deploy: 54b8473087b65a81afec50f19627df6e969d05f0

--- a/6/options/index.html
+++ b/6/options/index.html
@@ -183,6 +183,8 @@
           <li><a href="/6/options/display.html" class="d-inline-flex align-items-center rounded">Display</a></li>
           <li><a href="/6/options/localization.html" class="d-inline-flex align-items-center rounded">Localization</a>
           </li>
+          <li><a href="/6/options/keyboard-navigation.html" class="d-inline-flex align-items-center rounded">Keyboard Navigation</a>
+          </li>
         </ul>
       </li>
       <li class="mb-1">
@@ -323,7 +325,8 @@
       useTwentyfourHour: undefined
     },
     inline: false,
-    theme: 'auto'
+    theme: 'auto',
+    keyboardNavigation: true
   },
   keepInvalid: false,
   localization: {
@@ -359,7 +362,8 @@
     selectYear: 'Select Year',
     startOfTheWeek: 0,
     today: 'Go to today',
-    toggleMeridiem: 'Toggle Meridiem'
+    toggleMeridiem: 'Toggle Meridiem',
+    toggleAriaLabel?: string;
   },
   meta: {},
   multipleDates: false,
@@ -586,7 +590,6 @@
           <li class="mb-2"><a href="https://github.com/Eonasdan/tempus-dominus/discussions" target="_blank" rel="noopener">Discussions</a></li>
           <li class="mb-2"><a href="https://ko-fi.com/eonasdan" target="_blank" rel="noopener">Support me on Ko-fi</a>
           </li>
-          <li class="mb-2"><a href="https://discord.gg/BHS9jw9YPf" target="_blank" rel="noopener">Discord</a></li>
         </ul>
       </div>
     </div>
