--- a/6/plugins/bi1.html
+++ b/6/plugins/bi1.html
@@ -183,6 +183,8 @@
           <li><a href="/6/options/display.html" class="d-inline-flex align-items-center rounded">Display</a></li>
           <li><a href="/6/options/localization.html" class="d-inline-flex align-items-center rounded">Localization</a>
           </li>
+          <li><a href="/6/options/keyboard-navigation.html" class="d-inline-flex align-items-center rounded">Keyboard Navigation</a>
+          </li>
         </ul>
       </li>
       <li class="mb-1">
@@ -405,7 +407,6 @@ datetimepicker1.updateOptions({ display: { icons: biOneIcons }});</code>
           <li class="mb-2"><a href="https://github.com/Eonasdan/tempus-dominus/discussions" target="_blank" rel="noopener">Discussions</a></li>
           <li class="mb-2"><a href="https://ko-fi.com/eonasdan" target="_blank" rel="noopener">Support me on Ko-fi</a>
           </li>
-          <li class="mb-2"><a href="https://discord.gg/BHS9jw9YPf" target="_blank" rel="noopener">Discord</a></li>
         </ul>
       </div>
     </div>
